Fixed logo size + added jump

--- a/splashstyle.css
+++ b/splashstyle.css
@@ -77,6 +77,7 @@ h1 {
 	font-size: 1.8em;
 	border-radius: 24px;
 	display: block;
+	width: 100%;
 }
 
 .flex-row {
@@ -145,10 +146,10 @@ section {
 
 #splash-logo-stripe {
 	width: 100%;
-	max-height: 40%;
+	max-height: 32%;
 	box-shadow: 0 2px 10px #a5d4e0;
 	background-color: #ffffff;
-	margin-top: 48px;
+	margin-top: 32px;
 }
 
 #splash-screen {
@@ -171,6 +172,10 @@ section {
 	gap: 30px;
 	padding-bottom: 48px;
 	box-sizing: border-box;
+}
+
+#button-grouping a {
+	text-decoration: none;
 }
 
 body {
